Chore: navbar with links

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "elixirLS.suggestSpecs": false,
   "elixirLS.dialyzerEnabled": true,
   "elixirLS.signatureAfterComplete": false,
-  "elixirLS.fetchDeps": false,
+  "elixirLS.fetchDeps": true,
 
   "files.associations": {
     "*.heex": "phoenix-heex"
@@ -17,9 +17,9 @@
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "JakeBecker.elixir-ls"
   },
-
-  "[tailwindcss]": {
-    "editor.formatOnSave": true,
-    "editor.defaultFormatter": "bradlc.vscode-tailwindcss"
-  }
+  "emmet.includeLanguages": {
+    "elixir": "html",
+    "phoenix-heex": "html"
+  },
+  "emmet.triggerExpansionOnTab": true
 }
